<resources>
    <string name="app_name">"Chat Me "</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="signOut">Sign Out</string>
    <string name="signup">SignUp</string>
    <string name="login">Log in </string>
    <string name="done">Done</string>
    <string name="sent">Send</string>
    <string name="unit1">agatha chirstie</string>

    <string name="or">OR</string>
    <string name="facebook_app_id">1423561654349181</string>
    <string name="fb_login_protocol_scheme">fb1423561654349181</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="access_code_msg">you have to get an access code from your teacher </string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name </string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="position_hint">Your Position </string>
    <string name="phone_hint"> Phone </string>
    <string name="birth_date_hint">Birth Date </string>
    <string name="gender_label">Gender</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="membership">Membership</string>
    <string name="access_code">Access Code</string>
    <string name="get_started">Get Started</string>
    <string name="description_msg">Description Here</string>
    <string name="forget_password_qs">Forgot Password ? </string>
    <string name="forget_your_password_qs">Forgot your password?</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="create_account">Create an Account</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="fail_sent_email">Failed to send reset email! </string>
    <string name="user_in_app">All Users </string>
    <string name="profile">PROFILE</string>
    <string name="nameofperson">Name</string>
    <string name="active">Active</string>
    <string name="active_">Active</string>
    <string name="email">Email :- </string>
    <string name="phone">Phone :- </string>
    <string name="Age">Age :- </string>
    <string name="birthdate">BirthDate :- </string>
    <string name="save">Save</string>
    <string name="ad_id_bannar">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_one_online">No one online  </string>
    <string name="offline">Offline</string>
    <string name="sent_a_massage">sent massage</string>
    <string name="edit">Edit</string>
    <string name="saved">Saved</string>
    <string name="info">Info</string>
    <string name="invalid_password">"Password too short, enter minimum 6 characters!"</string>
    <string name="invalid_email">The Email Address is invalid</string>
    <string name="email_updated">Email address is updated.</string>
    <string name="failed_to_update">"Failed to update email!"</string>
    <string name="password_updated">Password is updated.</string>
    <string name="type_a_massage">Type a message </string>
    <string name="ops">ops! there is an problem please check your internet connecion </string>
    <string name="failed_to_update_pass">"Failed to update password!"</string>
    <string name="edit_content_description">Edit Your Profile </string>
    <string name="last_name_required">Last Name is required .</string>
    <string name="first_name_required">First Name is required .</string>
    <string name="all_users">All Users </string>
    <string name="online_users">Online Users </string>
    <string name="logo_des">Logo</string>
    <string name="signup_des">Sign up Please </string>
    <string name="years">  Years </string>
    <string name="pass_and_short">Password too short, enter minimum 6 characters!</string>
    <string name="cur_user">CurrentUser</string>
    <string name="edit_user">userToEdit</string>
    <string name="people_pass">/people/</string>
    <string name="not_Entered">Not Entered</string>
    <string name="sharedPre">SharedPre</string>
    <string name="person">person</string>
    <string name="nano_chat">/NanoChats/</string>
    <string name="user_are">.  Users are  </string>

</resources>
