<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.mobilestudio.chatme.screens.EditProfile"
    android:background="@color/App_background"
    android:padding="5dp">
    <ScrollView
        android:background="@color/App_background"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/profile_img_error" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/edit"
                    android:textColor="@android:color/black" />
            </RelativeLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                android:layout_margin="5dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_FirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name_hint"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"/>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_LastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_hint"
                        android:maxLines="1" />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/ed_EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_address_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">
                <EditText
                    android:id="@+id/ed_position"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/position_hint"
                    android:inputType="textAutoComplete"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:passwordToggleDrawable="@drawable/calendar"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/ed_birthDatee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/birth_date_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_save"
                android:background="@drawable/green_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/save"
                android:clickable="true"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        </ScrollView>

</RelativeLayout>
